docs: swagger API ドキュメントの記述を追加。
